--- a/gallery.html
+++ b/gallery.html
@@ -82,8 +82,8 @@
             <nav class="navbar navbar-expand-lg bg-white navbar-light py-0 px-4">
                 <a href="index.html" class="navbar-brand d-flex align-items-center text-center">
                     <div>
-                        <img class="img-fluid" src="img/logobarrnav.jpeg" alt="Icon"
-                            style="width: 100px; height: 35px;">
+                        <img class="img-fluid" src="img/logoateleiercolibricirculo barr nav.png" alt="Icon"
+                            style="width: 60px; height: 60px;">
                     </div>
                     <h4 class="m-0 text-primary"> </h4> <!-- Aqui va Texto -->
                 </a>
