--- a/cursos.html
+++ b/cursos.html
@@ -32,7 +32,7 @@
     <!-- Meta Etiquetas SEO End -->
 
     <!-- Favicon Strat-->
-    <link href="img/logofaviconico.ico" rel="icon">
+    <link href="img/logoateleiercolibri.ico.ico" rel="icon">
     <!-- Favicon End-->
 
     <!-- Apple Touc Icon Strat -->
@@ -82,7 +82,7 @@
             <nav class="navbar navbar-expand-lg bg-white navbar-light py-0 px-4">
                 <a href="index.html" class="navbar-brand d-flex align-items-center text-center">
                     <div>
-                        <img class="img-fluid" src="img/logoateleiercolibricirculo barr nav.png" alt="Icon"
+                        <img class="img-fluid" src="img/logoateleiercolibricirculo barr nav.jpg" alt="Icon"
                             style="width: 60px; height: 60px;">
                     </div>
                     <h4 class="m-0 text-primary"> </h4> <!-- Aqui va Texto -->
