--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
 
         <!-- Navbar Start -->
         <div class="container-fluid nav-bar bg-transparent">
-            <nav class="navbar navbar-expand-lg bg-white navbar-light py-0 px-4">
+            <nav class="navbar navbar-expand-lg bg-danger navbar-light py-0 px-4">
                 <a href="index.html" class="navbar-brand d-flex align-items-center text-center">
                     <div>
-                        <img class="img-fluid" src="img/logoateleiercolibricirculo barr nav.png" alt="Icon"
+                        <img class="img-fluid" src="img/logoateleiercolibricirculo barr nav.jpg" alt="Icon"
                             style="width: 60px; height: 60px;">
                     </div>
                     <h4 class="m-0 text-primary"> </h4> <!-- Aqui va Texto -->
@@ -105,10 +105,9 @@
         <div class="container-fluid header bg-white p-0">
             <div class="row g-0 align-items-center flex-column-reverse flex-md-row">
                 <div class="col-md-6 p-5 mt-lg-5">
-                    <h5 class="display-5 animated fadeIn mb-4">Atelier Colibri<span class="text-secondary"></span></h5>
-                    <p class="animated fadeIn mb-4 pb-2">• Art Soul & Spirit • Art & Self-knowledge
-                        • of Colors to Inspire and Shine your Life • Self-knowledge the way to your Essence • DM to
-                        Order🇵🇹.</p>
+                    <h5 class="display-5 animated fadeIn mb-4">ART SOUL COLIBRI <span class="text-secondary"></span></h5>
+                    <p class="animated fadeIn mb-4 pb-2">ARTE COM ALMA UM VOO PARA ESSÉNCIA
+                        </p>
                 </div>
                 <div class="col-md-6 animated fadeIn">
                     <div class="owl-carousel header-carousel">
