--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
     <!-- Meta Etiquetas SEO End -->
 
     <!-- Favicon Strat-->
-    <link href="img/logofaviconico.ico" rel="icon">
+    <link href="img/logoateleiercolibri.ico.ico" rel="icon">
     <!-- Favicon End-->
 
     <!-- Apple Touc Icon Strat -->
-    <link rel="icon" href="img/logofaviconico.ico">
+    <link rel="icon" href="img/logoateleiercolibri.ico.ico">
     <!-- Apple Touc Icon End -->
 
     <!-- Canonical start -->
@@ -105,23 +105,30 @@
         <div class="container-fluid header bg-white p-0">
             <div class="row g-0 align-items-center flex-column-reverse flex-md-row">
                 <div class="col-md-6 p-5 mt-lg-5">
-                    <h5 class="display-5 animated fadeIn mb-4">ART SOUL COLIBRI <span class="text-secondary"></span></h5>
+                    <h5 class="display-5 animated fadeIn mb-4">ART SOUL COLIBRI <span class="text-secondary"></span>
+                    </h5>
                     <p class="animated fadeIn mb-4 pb-2">ARTE COM ALMA UM VOO PARA ESSÉNCIA
-                        </p>
+                    </p>
                 </div>
                 <div class="col-md-6 animated fadeIn">
                     <div class="owl-carousel header-carousel">
                         <div class="owl-carousel-item">
-                            <img class="img-fluid" src="img/logoateleiercolibricirculo_carrousel.jpg" alt="">
+                            <img class="img-fluid" src="img/carrousel_atelliercolibri-1.jpg" alt="">
                         </div>
                         <div class="owl-carousel-item">
-                            <img class="img-fluid" src="img/carrousel2.jpeg" alt="">
+                            <img class="img-fluid" src="img/carrousel_atelliercolibri-2.jpeg" alt="">
                         </div>
                         <div class="owl-carousel-item">
-                            <img class="img-fluid" src="img/carrousel3.jpeg" alt="">
+                            <img class="img-fluid" src="img/carrousel_atelliercolibri-3.jpeg" alt="">
                         </div>
                         <div class="owl-carousel-item">
-                            <img class="img-fluid" src="img/carrousel4.jpeg" alt="">
+                            <img class="img-fluid" src="img/carrousel_atelliercolibri-4.jpeg" alt="">
+                        </div>
+                        <div class="owl-carousel-item">
+                            <img class="img-fluid" src="img/carrousel_atelliercolibri-5.png" alt="">
+                        </div>
+                        <div class="owl-carousel-item">
+                            <img class="img-fluid" src="img/carrousel_atelliercolibri-6.jpg" alt="">
                         </div>
                     </div>
                 </div>
@@ -131,7 +138,7 @@
 
         <!-- Watshap Start-->
         <img class="btn-whatsapp" src="img/flaticonwattshap.png" alt="whatsapp"
-            onclick="window.location.href='https://wa.me/351919404902?text=.!%20.%20.%20.%20.%20.'">
+            onclick="window.location.href='https://wa.me/351932857248?text=.!%20.%20.%20.%20.%20.'">
         <!-- Watshap End  -->
 
         <!-- Footer Start -->
