--- a/cursos.html
+++ b/cursos.html
@@ -36,7 +36,7 @@
     <!-- Favicon End-->
 
     <!-- Apple Touc Icon Strat -->
-    <link rel="icon" href="img/logofaviconico.ico">
+    <link rel="icon" href="img/logoateleiercolibri.ico.ico">
     <!-- Apple Touc Icon End -->
 
     <!-- Canonical start -->
@@ -159,8 +159,8 @@
                 <div class="row g-5">
                     <div class="col-lg-3 col-md-6">
                         <h5 class="text-white mb-4">Get in touch</h5>
-                        <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Porto, Portugal</p>
-                        <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+351 919404902</p>
+                        <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Portugal</p>
+                        <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+351 932857248</p>
                         <p class="mb-2"><i class="fa fa-envelope me-3"></i>artsoulcolibri.com</p>
                         <div class="d-flex pt-2">
                             <a class="btn btn-outline-light btn-social"
