--- a/gallery.html
+++ b/gallery.html
@@ -32,11 +32,11 @@
     <!-- Meta Etiquetas SEO End -->
 
     <!-- Favicon Strat-->
-    <link href="img/logofaviconico.ico" rel="icon">
+    <link href="img/logoateleiercolibri.ico.ico" rel="icon">
     <!-- Favicon End-->
 
     <!-- Apple Touc Icon Strat -->
-    <link rel="icon" href="img/logofaviconico.ico">
+    <link rel="icon" href="img/logoateleiercolibri.ico.ico">
     <!-- Apple Touc Icon End -->
 
     <!-- Canonical start -->
@@ -103,7 +103,7 @@
 
         <!-- Watshap Start-->
         <img class="btn-whatsapp" src="img/flaticonwattshap.png" alt="whatsapp"
-            onclick="window.location.href='https://wa.me/351919404902?text=.!%20.%20.%20.%20.%20.'">
+            onclick="window.location.href='https://wa.me/351932857248?text=.!%20.%20.%20.%20.%20.'">
         <!-- Watshap End  -->
 
         <!-- Gallery Start -->
@@ -185,12 +185,12 @@
 
         <!-- Footer Start -->
         <div class="container-fluid bg-dark text-white-50 footer pt-1 mt-1 wow fadeIn" data-wow-delay="0.1s">
-            <div class="container py-5">
+            <div class="container py-2">
                 <div class="row g-5">
                     <div class="col-lg-3 col-md-6">
                         <h5 class="text-white mb-4">Get in touch</h5>
-                        <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Porto, Portugal</p>
-                        <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+351 919404902</p>
+                        <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Portugal</p>
+                        <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+351 932857248</p>
                         <p class="mb-2"><i class="fa fa-envelope me-3"></i>artsoulcolibri.com</p>
                         <div class="d-flex pt-2">
                             <a class="btn btn-outline-light btn-social"
