--- a/index.html
+++ b/index.html
@@ -105,10 +105,11 @@
         <div class="container-fluid header bg-white p-0">
             <div class="row g-0 align-items-center flex-column-reverse flex-md-row">
                 <div class="col-md-6 p-5 mt-lg-5">
-                    <h5 class="display-5 animated fadeIn mb-4">ART SOUL COLIBRI <span class="text-secondary"></span>
+                    <h5 class="display-5 animated fadeIn mb-4">ART SOUL COLIBRI<span class="text-secondary"></span>
                     </h5>
-                    <p class="animated fadeIn mb-4 pb-2">ARTE COM ALMA UM VOO PARA ESSÉNCIA
-                    </p>
+                    <p class="animated fadeIn mb-4 pb-2">ARTE COM ALMA UM VOO À ESSÊNCIA</p>
+                    <p class="animated fadeIn mb-4 pb-2">“A Arte é Sobretudo um estado de Alma” Marc Chagall</p>
+                    <p class="animated fadeIn mb-4 pb-2">Marc Chagall</p>
                 </div>
                 <div class="col-md-6 animated fadeIn">
                     <div class="owl-carousel header-carousel">
@@ -116,19 +117,22 @@
                             <img class="img-fluid" src="img/carrousel_atelliercolibri-1.jpg" alt="">
                         </div>
                         <div class="owl-carousel-item">
-                            <img class="img-fluid" src="img/carrousel_atelliercolibri-2.jpeg" alt="">
+                            <img class="img-fluid" src="img/carrousel_atelliercolibri-2.jpg" alt="">
                         </div>
                         <div class="owl-carousel-item">
-                            <img class="img-fluid" src="img/carrousel_atelliercolibri-3.jpeg" alt="">
+                            <img class="img-fluid" src="img/carrousel_atelliercolibri-3.jpg" alt="">
                         </div>
                         <div class="owl-carousel-item">
-                            <img class="img-fluid" src="img/carrousel_atelliercolibri-4.jpeg" alt="">
+                            <img class="img-fluid" src="img/carrousel_atelliercolibri-4.jpg" alt="">
                         </div>
                         <div class="owl-carousel-item">
-                            <img class="img-fluid" src="img/carrousel_atelliercolibri-5.png" alt="">
+                            <img class="img-fluid" src="img/carrousel_atelliercolibri-5.jpg" alt="">
                         </div>
                         <div class="owl-carousel-item">
                             <img class="img-fluid" src="img/carrousel_atelliercolibri-6.jpg" alt="">
+                        </div>
+                        <div class="owl-carousel-item">
+                            <img class="img-fluid" src="img/carrousel_atelliercolibri-7.jpg" alt="">
                         </div>
                     </div>
                 </div>
