--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <h5 class="display-5 animated fadeIn mb-4">ART SOUL COLIBRI<span class="text-secondary"></span>
                     </h5>
                     <p class="animated fadeIn mb-4 pb-2">ARTE COM ALMA UM VOO À ESSÊNCIA</p>
-                    <p class="animated fadeIn mb-4 pb-2">“A Arte é Sobretudo um estado de Alma” Marc Chagall</p>
+                    <p class="animated fadeIn mb-4 pb-2">“A Arte é Sobretudo um estado de Alma”</p>
                     <p class="animated fadeIn mb-4 pb-2">Marc Chagall</p>
                 </div>
                 <div class="col-md-6 animated fadeIn">
