--- a/index.html
+++ b/index.html
@@ -105,11 +105,13 @@
         <div class="container-fluid header bg-white p-0">
             <div class="row g-0 align-items-center flex-column-reverse flex-md-row">
                 <div class="col-md-6 p-5 mt-lg-5">
-                    <h5 class="display-5 animated fadeIn mb-4">ART SOUL COLIBRI<span class="text-secondary"></span>
-                    </h5>
-                    <p class="animated fadeIn mb-4 pb-2">ARTE COM ALMA UM VOO À ESSÊNCIA</p>
-                    <p class="animated fadeIn mb-4 pb-2">“A Arte é Sobretudo um estado de Alma”</p>
-                    <p class="animated fadeIn mb-4 pb-2">Marc Chagall</p>
+                    <h5 class="display-5 animated fadeIn mb-4"><FONT FACE="aileron">ARTE COM ALMA UM VOO À ESSÊNCIA</FONT><span class="text-secondary"></span></h5>
+                    <div <FONT FACE="versaille">ARTE COM ALMA UM VOO À ESSÊNCIA</FONT>
+                    </div>
+                    <FONT FACE="virtual">“A Arte é Sobretudo um estado de Alma”</FONT>
+                    <div <FONT FACE="virtual">Marc Chagall</FONT>
+                    </div>
+
                 </div>
                 <div class="col-md-6 animated fadeIn">
                     <div class="owl-carousel header-carousel">
