--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <div class="container-fluid header bg-white p-0">
             <div class="row g-0 align-items-center flex-column-reverse flex-md-row">
                 <div class="col-md-6 p-5 mt-lg-5">
-                    <h5><FONT FACE="aileron">ARTE COM ALMA UM VOO À ESSÊNCIA</FONT><span class="text-secondary"></span></h5>
+                    <h5><FONT FACE="aileron">ART SOUL COLIBRI</FONT><span class="text-secondary"></span></h5>
                     <div <FONT FACE="versaille">ARTE COM ALMA UM VOO À ESSÊNCIA</FONT>
                     </div>
                     <FONT FACE="virtual">“A Arte é Sobretudo um estado de Alma”</FONT>
