--- a/gallery.html
+++ b/gallery.html
@@ -203,7 +203,7 @@
                 <div class="copyright">
                     <div class="row">
                         <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                            &copy; <a class="border-bottom" href="#">Atelier Colibri</a>, All rights reserved.
+                            &copy; <a class="border-bottom" href="#">Art Soul Colibri</a>, All rights reserved.
                             Designed by <a class="border-bottom" href="index.html">HBO Consulting</a>
                         </div>
                     </div>
