--- a/index.html
+++ b/index.html
@@ -118,25 +118,28 @@
                 <div class="col-md-6 animated fadeIn">
                     <div class="owl-carousel header-carousel">
                         <div class="owl-carousel-item">
-                            <img class="img-fluid" src="img/carrousel_atelliercolibri-1.jpg" alt="">
+                            <img class="img-fluid" src="img/carousel1.jpeg" alt="">
                         </div>
                         <div class="owl-carousel-item">
-                            <img class="img-fluid" src="img/carrousel_atelliercolibri-2.jpg" alt="">
+                            <img class="img-fluid" src="img/carousel2.jpeg" alt="">
                         </div>
                         <div class="owl-carousel-item">
-                            <img class="img-fluid" src="img/carrousel_atelliercolibri-3.jpg" alt="">
+                            <img class="img-fluid" src="img/carousel3.jpeg" alt="">
                         </div>
                         <div class="owl-carousel-item">
-                            <img class="img-fluid" src="img/carrousel_atelliercolibri-4.jpg" alt="">
+                            <img class="img-fluid" src="img/carousel4.jpeg" alt="">
                         </div>
                         <div class="owl-carousel-item">
-                            <img class="img-fluid" src="img/carrousel_atelliercolibri-5.jpg" alt="">
+                            <img class="img-fluid" src="img/carousel5.png" alt="">
                         </div>
                         <div class="owl-carousel-item">
-                            <img class="img-fluid" src="img/carrousel_atelliercolibri-6.jpg" alt="">
+                            <img class="img-fluid" src="img/carousel6.jpeg" alt="">
                         </div>
                         <div class="owl-carousel-item">
-                            <img class="img-fluid" src="img/carrousel_atelliercolibri-7.jpg" alt="">
+                            <img class="img-fluid" src="img/carousel7.jpeg" alt="">
+                        </div>
+                        <div class="owl-carousel-item">
+                            <img class="img-fluid" src="img/carousel8.jpeg" alt="">
                         </div>
                     </div>
                 </div>
