--- a/index.html
+++ b/index.html
@@ -118,28 +118,16 @@
                 <div class="col-md-6 animated fadeIn">
                     <div class="owl-carousel header-carousel">
                         <div class="owl-carousel-item">
-                            <img class="img-fluid" src="img/carousel1.jpeg" alt="">
+                            <img class="img-fluid" src="img/carousel_art_soul_colibri1.jpg" alt="">
                         </div>
                         <div class="owl-carousel-item">
-                            <img class="img-fluid" src="img/carousel2.jpeg" alt="">
+                            <img class="img-fluid" src="img/carousel_art_soul_colibri2.jpg" alt="">
                         </div>
                         <div class="owl-carousel-item">
-                            <img class="img-fluid" src="img/carousel3.jpeg" alt="">
+                            <img class="img-fluid" src="img/carousel_art_soul_colibri3.jpg" alt="">
                         </div>
                         <div class="owl-carousel-item">
-                            <img class="img-fluid" src="img/carousel4.jpeg" alt="">
-                        </div>
-                        <div class="owl-carousel-item">
-                            <img class="img-fluid" src="img/carousel5.png" alt="">
-                        </div>
-                        <div class="owl-carousel-item">
-                            <img class="img-fluid" src="img/carousel6.jpeg" alt="">
-                        </div>
-                        <div class="owl-carousel-item">
-                            <img class="img-fluid" src="img/carousel7.jpeg" alt="">
-                        </div>
-                        <div class="owl-carousel-item">
-                            <img class="img-fluid" src="img/carousel8.jpeg" alt="">
+                            <img class="img-fluid" src="img/carousel_art_soul_colibri4.jpg" alt="">
                         </div>
                     </div>
                 </div>
