--- a/cursos.html
+++ b/cursos.html
@@ -79,7 +79,7 @@
 
         <!-- Navbar Start -->
         <div class="container-fluid nav-bar bg-transparent">
-            <nav class="navbar navbar-expand-lg bg-white navbar-light py-0 px-4">
+            <nav class="navbar navbar-expand-lg bg-danger navbar-light py-0 px-4">
                 <a href="index.html" class="navbar-brand d-flex align-items-center text-center">
                     <div>
                         <img class="img-fluid" src="img/logoateleiercolibricirculo barr nav.jpg" alt="Icon"
@@ -93,6 +93,7 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto">
                         <a href="index.html" class="nav-item nav-link active">Home</a>
+                        <a href="" class="nav-item nav-link">About</a>
                         <a href="gallery.html" class="nav-item nav-link">Gallery</a>
                         <a href="cursos.html" class="nav-item nav-link">Cursos</a>
                     </div>
