--- a/index.html
+++ b/index.html
@@ -130,6 +130,15 @@
                         <div class="owl-carousel-item">
                             <img class="img-fluid" src="img/carousel_art_soul_colibri4.jpg" alt="">
                         </div>
+                        <div class="owl-carousel-item">
+                            <img class="img-fluid" src="img/carousel_art_soul_colibri5.jpg" alt="">
+                        </div>
+                        <div class="owl-carousel-item">
+                            <img class="img-fluid" src="img/carousel_art_soul_colibri6.jpg" alt="">
+                        </div>
+                        <div class="owl-carousel-item">
+                            <img class="img-fluid" src="img/carousel_art_soul_colibri7.jpg" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
