--- a/index.html
+++ b/index.html
@@ -162,6 +162,8 @@
                         <div class="d-flex pt-2">
                             <a class="btn btn-outline-light btn-social"
                                 href="https://www.instagram.com/atelier_colibri"><i class="fab fa-instagram"></i></a>
+                            <a class="btn btn-outline-light btn-social"
+                                href="mailto:email@provedor.com"><i class="fa fa-phone"></i></a>
                         </div>
                     </div>
                 </div>
