--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                             <a class="btn btn-outline-light btn-social"
                                 href="https://www.instagram.com/atelier_colibri"><i class="fab fa-instagram"></i></a>
                             <a class="btn btn-outline-light btn-social"
-                                href="mailto:email@provedor.com"><i class="fa fa-envelope"></i></a>
+                                href="mailto:artsoulcolibri.com"><i class="fa fa-envelope"></i></a>
                         </div>
                     </div>
                 </div>
