--- a/index.html
+++ b/index.html
@@ -158,12 +158,12 @@
                         <h5 class="text-white mb-4">Get in touch</h5>
                         <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Portugal</p>
                         <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+351 932857248</p>
-                        <p class="mb-2"><i class="fa fa-envelope me-3"></i>artsoulcolibri.com</p>
+                        <p class="mb-2"><i class="fa fa-fa fa-globe me-3"></i>artsoulcolibri.com</p>
                         <div class="d-flex pt-2">
                             <a class="btn btn-outline-light btn-social"
                                 href="https://www.instagram.com/atelier_colibri"><i class="fab fa-instagram"></i></a>
                             <a class="btn btn-outline-light btn-social"
-                                href="mailto:artsoulcolibri.com"><i class="fa fa-globe"></i></a>
+                                href="mailto:artsoulcolibri.com"><i class="fa fa-envelope"></i></a>
                         </div>
                     </div>
                 </div>
