--- a/about.html
+++ b/about.html
@@ -107,8 +107,6 @@
             onclick="window.location.href='https://wa.me/351932857248?text=.!%20.%20.%20.%20.%20.'">
         <!-- Watshap End  -->
 
-        
-
         <!-- Footer Start -->
         <div class="container-fluid bg-dark text-white-50 footer pt-1 mt-1 wow fadeIn" data-wow-delay="0.1s">
             <div class="container py-2">
@@ -117,10 +115,12 @@
                         <h5 class="text-white mb-4">Get in touch</h5>
                         <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Portugal</p>
                         <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+351 932857248</p>
-                        <p class="mb-2"><i class="fa fa-envelope me-3"></i>artsoulcolibri.com</p>
+                        <p class="mb-2"><i class="fa fa-fa fa-globe me-3"></i>artsoulcolibri.com</p>
                         <div class="d-flex pt-2">
                             <a class="btn btn-outline-light btn-social"
                                 href="https://www.instagram.com/atelier_colibri"><i class="fab fa-instagram"></i></a>
+                            <a class="btn btn-outline-light btn-social"
+                                href="mailto:ateliercolibri@gmail.com"><i class="fa fa-envelope"></i></a>
                         </div>
                     </div>
                 </div>
